--- a/index.html
+++ b/index.html
@@ -7,17 +7,35 @@
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.js"></script>
 </head>
-
 <body>
   <header>
-    <h1>ThreatShield App</h1>
+    <h1>Enhance Your IT Security with ThreatShield</h1>
+    <p>At ThreatShield, we empower businesses and organizations to effectively identify, evaluate, and manage threats and risks within their IT systems. Our comprehensive platform enables teams to collaborate seamlessly, whether it's for the entire organization or a specific IT system. Here's how ThreatShield can transform your IT security</p>
   </header>
   <main>
-    <h2>This is a test page.</h2>
+    <h2>Define Systems</h2>
+    <p>Easily define the technical components, technologies, frameworks, libraries (BOM), and more that make up your IT system.</p>
+
+    <h2>Capture Assets</h2>
+    <p>Identify and catalog the valuable assets within your IT system that require protection.</p>
+
+    <h2>Identify Threats</h2>
+    <p>Effortlessly record potential threats that your IT system may face.</p>
+
+    <h2>Derive Risks from Threats</h2>
+    <p>Automatically derive risks from the identified threats, providing you with a clear understanding of potential vulnerabilities.</p>
+
+    <h2>Manage Mitigations</h2>
+    <p>Obtain mitigation strategies to address identified risks.</p>
+
+    <h2>Generate Reports</h2>
+    <p>Generate reports to share with your team and stakeholders.</p>
+
+    <h2>AI-Powered Suggestions</h2>
+    <p>Additionally, ThreatShield is powered by AI throughout the process.</p>
   </main>
   <footer>
-    <p>Contact us at <a href="mailto:contact@threatshield.eu">contact@threatshield.eu</a>.</p>
+    <p>Join the ranks of organisations that trust ThreatShield to bolster their IT security. Take advantage of our AI-driven platform and structured approach to safeguarding your digital assets..</p>
   </footer>
 </body>
-
 </html>
