Switched to TailwindCSS and Vite

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,8 @@
   <meta name="description" content="ThreatShield - Model and analyse threats to your IT systems" />
   <meta name="robots" content="index, follow" />
   <title>ThreatShield</title>
-  
-  
-  <script type="module" crossorigin src="/assets/main-c57d962b.js"></script>
-  <link rel="stylesheet" href="/assets/main-805e949b.css">
+  <script type="module" crossorigin src="./js/main.js" defer></script>
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 
 <body class="bg-black">
@@ -64,13 +62,8 @@
     </p>
   </main>
 
-  <footer class="mt-5 w-full text-xs text-center text-legendary-200">
-      <div class="mt-5 space-x-5">
-          <a href="https://inspired.consulting">&copy; 2023 Inspired Consulting GmbH</a>
-          <a href="/">Home</a>
-          <a href="/imprint.html">Imprint</a>
-      </div>
-  </footer>
+  {{> footer }}
+
 </body>
 
 </html>
