Minor text updates

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,6 @@
     <span class="text-xl leading-3 ">The legendary</span>
     <h1 class="leading-[4rem] text-7xl font-bold">
       <span class="tracking-tight">Threat</span><span class="ms-1 tracking-normal">Shield</span>
-
     </h1>
     <div class="mt-6">
       <p class="text-2xl leading-6">It's a perilous world.</p>
@@ -35,8 +34,7 @@
 
     <h2 class="mt-3 mb-1">Define Systems</h2>
     <p>Easily define the technical components, technologies, frameworks, libraries (BOM), and more that make up your
-      IT
-      system.</p>
+      IT system.</p>
 
     <h2 class="mt-3 mb-1">Capture Assets</h2>
     <p>Identify and catalog the valuable assets within your IT system that require protection.</p>
@@ -52,7 +50,7 @@
     <p>Obtain mitigation strategies to address identified risks.</p>
 
     <h2 class="mt-3 mb-1">Generate Reports</h2>
-    <p>Generate reports to share with your team and stakeholders.</p>
+    <p>Coming soon: Generate reports to share with your team and stakeholders.</p>
 
     <h2 class="mt-3 mb-1">AI-Powered Suggestions</h2>
     <p>Additionally, ThreatShield is powered by AI throughout the process.</p>
