FIxed color of imprint

--- a/src/imprint.html
+++ b/src/imprint.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="./css/main.css" />
 </head>
 
-<body class="bg-black">
-    <div class="container mx-auto text-center py-20 h-screen text-harlequin-500">
+<body class="bg-black h-screen">
+    <div class="container mx-auto text-center py-20  text-purple-500">
         <h1 class="my-2 text-2xl font-bold">Imprint</h1>
         <p class="text-xl">Responsible for content of this site</p>
         <p class="my-3">
@@ -29,9 +29,9 @@
             Phone: +49 221 27321334<br />
             E-Mail:get@inspired.consulting
         </p>
-        {{> footer }}
-    </div>
 
+    </div>
+    {{> footer }}
 </body>
 
 </html>
