--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,17 @@
   <link rel="stylesheet" href="./css/main.css" />
 </head>
 
-<body class="bg-black">
+<body class="bg-black ms-8">
   <header class="container mx-auto py-20 text-legendary-500 font-light tracking-wide">
     <span class="text-xl leading-3 ">The legendary</span>
     <h1 class="leading-[4rem] text-7xl font-bold">
-      <span class="tracking-tight">Threat</span><span class="ms-1 tracking-normal">Shield</span>
+      <span class="tracking-tight">Threat</span><span class="ms-1 tracking-normal">Shield 2</span>
     </h1>
     <div class="mt-6">
       <p class="text-2xl leading-6">It's a perilous world.</p>
       <p class="text-2xl">Equip yourself with this shield and safeguard your systems.</p>
+      <span class="btn-primary">Text</span>
+      <span class="btn-secondary">Text</span>
     </div>
   </header>
 
