added icon sources to footer and minor changes in sections

--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,11 @@
       </h1>
       <p class="text-2xl my-6">Identify and mitigate potential security threats with ThreatShield's threat modelling
         service</p>
-      <button type="button" class="btn-primary h-14 mt-2 tracking-wider bg-primary-700 hover:bg-primary-800">Want to
+      <button type="button" class="btn-primary h-14 mt-2 tracking-wider bg-primary-900 hover:bg-primary-800">Want to
         learn more about us? Send us an email.</button>
       <div class="mt-7">
         <a href="https://github.com/" class="hover:text-primary-900 underline underline-offset-2 flex items-center">
-          <img src="./logos/github-mark-white.png" alt="GitHub Logo" class="w-6 h-6 mr-2">
+          <img src="./logos/github-mark-white.png" alt="GitHub Logo" class="w-6 h-6 mx-2">
           Fork us on GitHub
         </a>
       </div>
@@ -43,6 +43,7 @@
       <div class="grid grid-cols-2 gap-4">
         <div class="mr-12">
           <h2 class="text-4xl mb-8 font-bold">AI-Driven Threat Modeling & Intuitive Design </h2>
+          <hr class="border-t-2 border-secondary-500 w-1/6 my-4">
           <p class="text-lg">We use AI to provide concrete examples instead of abstract documentation. Our approach
             ensures easily accessible guidance and actionable recommendations.</p>
         </div>
@@ -53,7 +54,8 @@
     <!-- LIST OF BENEFITS -->
     <section class="w-full h-full pt-20 bg-gray-100 ts-benefit-section">
       <h3 class="text-center text-primary-900 mb-4">YOUR BENEFITS</h3>
-      <h2 class="text-4xl mb-8 font-bold text-center text-primary-900">Stay one step ahead of potential threats</h2>
+      <hr class="border-t-2 border-secondary-500 w-1/6 mx-auto my-4">
+      <h2 class="text-4xl mb-8 font-bold text-center text-primary-900 pt-6">Stay one step ahead of potential threats</h2>
       <div class="flex place-content-center pt-6">
 
         <!-- CARD 1 -->
