fixing text color in footer.hbs

--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,7 @@
     </article>
   </main>
 
+  <div class="text-gray-100">
   <h2 class="mt-3 mb-1">Enhance Your IT Security with ThreatShield</h2>
   <p>At ThreatShield, we empower businesses and organizations to effectively identify, evaluate, and manage threats
     and risks within their IT systems. Our comprehensive platform enables teams to collaborate seamlessly, whether
@@ -172,6 +173,7 @@
 
 
   {{> footer }}
+</div> 
 
 </body>
 
