--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,11 @@
       </div>
     </div>
   </header>
+  
 
-
-
-  </div>
-
-  <!-- PREVIEW WEB APP -->
   <main>
+  <!-- PREVIEW WEB APP -->
+  
     <section class="container mx-auto mt-[-18rem] mb-24 text-primary-100">
       <div class="grid grid-cols-2 gap-4">
         <div class="mr-12">
@@ -56,7 +54,8 @@
     </section>
 
     <!-- LIST OF BENEFITS -->
-    <section class="w-full h-full pt-20 bg-gray-100">
+
+    <section class="w-full h-full py-20 bg-gray-100">
       <h3 class="text-center text-primary-900 mb-4">YOUR BENEFITS</h3>
       <hr class="border-t-2 border-secondary-300 w-40 mx-auto my-4">
       <h2 class="text-4xl mb-8 font-bold text-center text-primary-900 pt-2">Stay one step ahead of potential threats
@@ -64,7 +63,7 @@
       <div class="flex place-content-center pt-6">
 
         <!-- CARD 1 -->
-        <div class="max-w-sm rounded overflow-hidden bg-gray-100 border-2 border-secondary-300 mr-6 ts-hover-trigger">
+        <div class="max-w-sm rounded overflow-hidden border-2 border-secondary-300 mr-6 ts-hover-trigger">
           <img src="./img/roboter.png" alt="Roboter Icon" class="w-12 h-12 mx-auto my-6 ts-static-icon">
 
           <!-- Animated GIF Icon (Initially Hidden) -->
@@ -81,7 +80,7 @@
         </div>
 
         <!-- CARD 2 -->
-        <div class="max-w-sm rounded overflow-hidden bg-gray-100 border-2 border-secondary-300 mr-6 ts-hover-trigger">
+        <div class="max-w-sm rounded overflow-hidden border-2 border-secondary-300 mr-6 ts-hover-trigger">
           <img src="./img/schild.png" alt="Shield Icon" class="w-12 h-12 mx-auto my-6 ts-static-icon">
 
           <!-- Animated GIF Icon (Initially Hidden) -->
@@ -98,7 +97,7 @@
         </div>
 
         <!-- CARD 3 -->
-        <div class="max-w-sm rounded overflow-hidden bg-gray-100 border-2 border-secondary-300 ts-hover-trigger">
+        <div class="max-w-sm rounded overflow-hidden border-2 border-secondary-300 ts-hover-trigger">
           <img src="./img/zusammenarbeit.png" alt="Collaboration Icon" class="w-12 h-12 mx-auto my-6 ts-static-icon">
 
           <!-- Animated GIF Icon (Initially Hidden) -->
@@ -116,21 +115,19 @@
       </div>
     </section>
 
-
-
     <!-- HOW DOES IT WORK SECTION -->
 
-    <section class="w-full h-full py-20 bg-gray-100">
+    <section class="w-full h-full py-20 bg-primary-200">
       <h3 class="text-center text-primary-900 mb-4">HOW DOES IT WORK</h3>
-      <hr class="border-t-2 border-secondary-300 w-40 mx-auto my-4">
+      <hr class="border-t-2 border-primary-300 w-40 mx-auto my-4">
       <h2 class="text-4xl mb-8 font-bold text-center text-primary-900 pt-2">3 simple steps</h2>
       <div class="flex place-content-center pt-6">
 
         <!-- CARD 1 -->
-        <div class="max-w-sm rounded overflow-hidden mr-6 px-6 py-2 border-2 border-secondary-300">
+        <div class="max-w-sm rounded overflow-hidden mr-6 px-6 py-2 border-2 border-primary-300 bg-gray-100 bg-opacity-85">
 
           <!-- Square with SVG -->
-          <div class="bg-primary-200 rounded-md w-8 my-6 text-center mx-auto">
+          <div class="bg-primary-200 rounded-md w-8 my-6  mx-auto">
             <!-- Your SVG code goes here -->
             <svg width="58" height="58" viewBox="0 0 58 58" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect width="58" height="58" rx="8" fill="#E1D6F6" />
@@ -145,10 +142,10 @@
         </div>
 
           <!-- CARD 2 -->
-          <div class="max-w-sm rounded overflow-hidden mr-6 px-6 py-2 border-2 border-secondary-300">
+          <div class="max-w-sm rounded overflow-hidden mr-6 px-6 py-2 border-2 border-primary-300 bg-gray-100 bg-opacity-85">
 
             <!-- Square with SVG -->
-            <div class="bg-primary-200 rounded-md w-8 my-6 text-center mx-auto">
+            <div class="bg-primary-200 rounded-md w-8 my-6 mx-auto">
               <!-- Your SVG code goes here -->
               <svg width="58" height="58" viewBox="0 0 58 58" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="58" height="58" rx="8" fill="#E1D6F6"/>
@@ -163,10 +160,10 @@
           </div>
 
           <!-- CARD 3 -->
-          <div class="max-w-sm rounded overflow-hidden mr-6 px-6 py-2 border-2 border-secondary-300">
+          <div class="max-w-sm rounded overflow-hidden mr-6 px-6 py-2 border-2 border-primary-300 bg-gray-100 bg-opacity-85">
 
             <!-- Square with SVG -->
-            <div class="bg-primary-200 rounded-md w-8 my-6 xtext-center mx-auto">
+            <div class="bg-primary-200 rounded-md w-8 my-6 mx-auto">
               <!-- Your SVG code goes here -->
               <svg width="58" height="58" viewBox="0 0 58 58" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="58" height="58" rx="8" fill="#E1D6F6"/>
@@ -178,10 +175,118 @@
               Easily set up ThreatShield on your own infrastructure and integrate it into your daily operations, empowering your team to manage threats autonomously.
             </p>
           </div> 
-        
     </section>
 
 
+     <!-- OFFERS -->
+
+     <section class="w-full h-full py-20 bg-gray-100">
+      <h3 class="text-center text-primary-900 mb-4">OFFERING</h3>
+      <hr class="border-t-2 border-secondary-300 w-40 mx-auto my-4">
+      <h2 class="text-4xl mb-8 font-bold text-center text-primary-900 pt-2">Our offer to you
+      </h2>
+      <div class="flex place-content-center pt-6">
+
+        <!-- CARD 1 -->
+        
+        <div class="max-w-sm rounded overflow-hidden border-2 border-gray-300 mr-6 pt-6">
+          <div class="px-6 py-2">
+            <div class="font-bold text-xl mb-6 text-primary-900">More control: Discover our open source self-hosting solution</div>
+            <hr class="border-t-2 border-gray-300 mx-auto my-4">
+            <ul class="list-none text-primary-900 text-lg pl-4">
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Explore our open-source self-hosting solution
+              </li>
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Access the GitHub repository for our software
+              </li>
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Discover the convenience of Docker images
+              </li>
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Start your journey with full control and unlimited flexibility
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- CARD 2 -->
+
+        <div class="max-w-sm rounded overflow-hidden border-2 border-gray-300 mr-6 pt-6">
+          <div class="px-6 py-2">
+            <div class="font-bold text-xl mb-6 text-primary-900">More control: Discover our open source self-hosting solution</div>
+            <hr class="border-t-2 border-gray-300 mx-auto my-4">
+            <ul class="list-none text-primary-900 text-lg pl-4">
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Explore our open-source self-hosting solution
+              </li>
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Access the GitHub repository for our software
+              </li>
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Discover the convenience of Docker images
+              </li>
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Start your journey with full control and unlimited flexibility
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- CARD 3 -->
+
+        <div class="max-w-sm rounded overflow-hidden border-2 border-gray-300 mr-6 pt-6">
+          <div class="px-6 py-2">
+            <div class="font-bold text-xl mb-6 text-primary-900">Strengthen your defenses: <br> Threat modeling workshops</div>
+            <hr class="border-t-2 border-gray-300 mx-auto my-4">
+            <ul class="list-none text-primary-900 text-lg pl-4">
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Discover cybersecurity through hands-on workshops
+              </li>
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Identify and mitigate security threats
+              </li>
+              <li class="flex items-center mb-4">
+                <svg class="w-6 h-4 mr-2 text-secondary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                </svg>
+                Equip yourself to safeguard digital assets
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
@@ -189,39 +294,6 @@
   </main>
 
   <div class="text-gray-100">
-    <h2 class="mt-3 mb-1">Enhance Your IT Security with ThreatShield</h2>
-    <p>At ThreatShield, we empower businesses and organizations to effectively identify, evaluate, and manage threats
-      and risks within their IT systems. Our comprehensive platform enables teams to collaborate seamlessly, whether
-      it's for the entire organization or a specific IT system. Here's how ThreatShield can transform your IT security
-    </p>
-
-    <h2 class="mt-3 mb-1">Define Systems</h2>
-    <p>Easily define the technical components, technologies, frameworks, libraries (BOM), and more that make up your
-      IT system.</p>
-
-    <h2 class="mt-3 mb-1">Capture Assets</h2>
-    <p>Identify and catalog the valuable assets within your IT system that require protection.</p>
-
-    <h2 class="mt-3 mb-1">Identify Threats</h2>
-    <p>Effortlessly record potential threats that your IT system may face.</p>
-
-    <h2 class="mt-3 mb-1">Derive Risks from Threats</h2>
-    <p>Automatically derive risks from the identified threats, providing you with a clear understanding of potential
-      vulnerabilities.</p>
-
-    <h2 class="mt-3 mb-1">Manage Mitigations</h2>
-    <p>Obtain mitigation strategies to address identified risks.</p>
-
-    <h2 class="mt-3 mb-1">Generate Reports</h2>
-    <p>Coming soon: Generate reports to share with your team and stakeholders.</p>
-
-    <h2 class="mt-3 mb-1">AI-Powered Suggestions</h2>
-    <p>Additionally, ThreatShield is powered by AI throughout the process.</p>
-    <p class="my-2">
-      Join the ranks of organisations that trust ThreatShield to bolster their IT security. Take advantage of our
-      AI-driven platform and structured approach to safeguarding your digital assets.
-    </p>
-
 
     {{> footer }}
   </div>
