--- a/src/imprint.html
+++ b/src/imprint.html
@@ -22,20 +22,29 @@
             Registergericht: Amtsgericht Köln<br />
             VAT: DE327219324<br />
             Represented by the managing directors: <br />
-            Christian Albrecht, Frank Pestke, Oliver Tigges<br />
+            Christian Albrecht, Oliver Tigges<br />
         </p>
         <p class="mt-3">
             Contact:<br />
             Phone: +49 221 27321334<br />
             E-Mail:get@inspired.consulting
         </p>
-<section class="my-6">
-        <ul>
-           <li><a href="https://www.flaticon.com/de/kostenlose-animierte-icons/roboter" title="Animated roboter icon" class="underline underline-offset-4 hover:text-primary-100">Animated roboter icon by Freepik - Flaticon</a></li>
-            <li><a href="https://www.flaticon.com/de/kostenloses-animiertes-icon/zusammenarbeit_9822027?term=menschen&page=1&position=8&origin=tag&related_id=9822027" title="Animated people icon" class="underline underline-offset-4 hover:text-primary-100">Animated people icon by Freepik - Flaticon</a></li> 
-            <li><a href="https://www.flaticon.com/de/kostenlose-animierte-icons/sicherheit" title="Animated shield icons" class="underline underline-offset-4 hover:text-primary-100">Animated shield icon by Freepik - Flaticon</a></li> 
-        </ul>
-    </section>
+        <section class="my-6">
+            <ul>
+                <li><a href="https://www.flaticon.com/de/kostenlose-animierte-icons/roboter"
+                        title="Animated roboter icon"
+                        class="underline underline-offset-4 hover:text-primary-100">Animated roboter icon by Freepik -
+                        Flaticon</a></li>
+                <li><a href="https://www.flaticon.com/de/kostenloses-animiertes-icon/zusammenarbeit_9822027?term=menschen&page=1&position=8&origin=tag&related_id=9822027"
+                        title="Animated people icon"
+                        class="underline underline-offset-4 hover:text-primary-100">Animated people icon by Freepik -
+                        Flaticon</a></li>
+                <li><a href="https://www.flaticon.com/de/kostenlose-animierte-icons/sicherheit"
+                        title="Animated shield icons"
+                        class="underline underline-offset-4 hover:text-primary-100">Animated shield icon by Freepik -
+                        Flaticon</a></li>
+            </ul>
+        </section>
 
     </div>
     {{> footer }}
