--- a/src/index.html
+++ b/src/index.html
@@ -30,17 +30,16 @@
             </h1>
             <p class="text-2xl mt-6 mb-12 md:text-3xl lg:text-3xl xl:text-3xl">
                 Identify and mitigate potential security
-                threats with ThreatShield's threat modellingservice</p>
+                threats with ThreatShield's threat modelling service</p>
             <a href="mailto:threatshield@inspired.consulting"
-                class="w-full bg-primary-900 text-white text-center racking-wider py-4 px-6 rounded hover:bg-primary-700">Send
-                us an email</a>
+                class="w-full bg-primary-900 text-white text-center racking-wider py-4 px-6 rounded hover:bg-primary-700">
+                Send us an e-mail</a>
             <div class="mt-12">
                 <span class="hover:text-primary-900">
                     <img src="./logos/github-mark-white.png" alt="GitHub Logo" class="w-6 h-6 mx-1 inline-block">
                     <a href="https://github.com/inspired-consulting/threat_shield" target="_blank"
-                        class="inline-block underline underline-offset-4 active:text-primary-100 visited:text-primary-100">Fork
-                        us
-                        on GitHub</a>
+                        class="inline-block underline underline-offset-4 active:text-primary-100 visited:text-primary-100">
+                        Fork us on GitHub</a>
                 </span>
             </div>
         </div>
@@ -129,7 +128,7 @@
         <!-- HOW DOES IT WORK SECTION -->
 
         <section class="w-full pt-20 pb-24 md:px-12 bg-primary-200">
-            <h3 class="text-center text-primary-900 mb-4">HOW DOES IT WORK</h3>
+            <h3 class="text-center text-primary-900 mb-4 uppercase">How does it work</h3>
             <hr class="border-t-2 border-primary-300 w-48 mx-auto my-4">
             <h2 class="text-4xl mb-8 font-bold text-center text-primary-900 pt-2">3 simple steps</h2>
             <div class="flex flex-col md:flex-row md:justify-center pt-6">
@@ -153,7 +152,8 @@
                     <div class="font-bold text-xl mb-2 text-primary-900 text-center">Initial Consultation</div>
                     <p class="text-gray-700 text-center pb-6">
                         Reach out for a preliminary discussion, followed by scheduling our specialized threat modeling
-                        workshop. Currently, we provide these workshops free of charge!
+                        workshop. <br />
+                        Currently, we provide these workshops free of charge!
                     </p>
                 </div>
 
@@ -209,9 +209,10 @@
         <!-- OFFERS -->
 
         <section class="w-full h-full py-20 bg-gray-100">
-            <h3 class="text-center text-primary-900 mb-4">OFFERING</h3>
+            <h3 class="text-center text-primary-900 mb-4 uppercase">Offering</h3>
             <hr class="border-t-2 border-secondary-300 w-40 mx-auto my-4">
-            <h2 class="text-4xl mb-8 font-bold text-center text-primary-900 pt-2">Our offer to you
+            <h2 class="text-4xl mb-8 font-bold text-center text-primary-900 pt-2">
+                Our offer to you
             </h2>
             <div class="flex flex-col lg:flex-row lg:justify-center md:ml-6 pt-6">
 
@@ -250,9 +251,9 @@
                             </ul>
                         </div>
                         <a href="mailto:threatshield@inspired.consulting"
-                            class="w-full bg-primary-500 text-white text-center py-3 mb-4 rounded hover:bg-primary-700">Get
-                            in
-                            touch</a>
+                            class="w-full bg-primary-500 text-white text-center py-3 mb-4 rounded hover:bg-primary-700">
+                            Get in touch
+                        </a>
                     </div>
                 </div>
 
