--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <!-- HEADER -->
 
 <body class="bg-primary-900 tracking-wide leading-normal">
-    <header class="w-full pt-32 pb-40 px-8 text-gray-100 font-light relative">
+    <header class="w-full py-20 md:pt-32 md:pb-40 px-8 text-gray-100 font-light relative min-h-screen md:min-h-fit">
         <div class="absolute inset-0 z-0"
             style="background-image: linear-gradient(90deg, rgba(102,69,232,1.00) 8%, rgba(126,73,244,1.00) 53%, rgba(149,74,244,1.00) 89%); background-position: center center; background-size: cover;">
         </div>
@@ -53,7 +53,7 @@
         <section class="container mx-auto mt-24 mb-24 text-primary-100 px-4 sm:px-8 md:px-0">
             <div class="grid md:grid-cols-2 gap-4">
                 <div class="md:mr-12">
-                    <h2 class="text-4xl mb-8 font-bold">AI-Driven Threat Modeling & Intuitive Design </h2>
+                    <h2 class="text-4xl mb-8 font-bold">AI-Driven Threat Modeling with Intuitive Design </h2>
                     <hr class="border-t-2 border-secondary-500 w-1/6 my-6">
                     <p class="text-lg">
                         We use AI to provide concrete examples instead of abstract documentation.
@@ -68,7 +68,7 @@
         <!-- LIST OF BENEFITS -->
 
         <section class="w-full pt-20 pb-24 px-8 bg-gray-100">
-            <h3 class="text-center text-primary-900 mb-4">YOUR BENEFITS</h3>
+            <h3 class="text-center text-primary-900 mb-4 uppercase">Your benefits</h3>
             <hr class="border-t-2 border-secondary-300 w-40 mx-auto my-4">
             <h2 class="text-4xl mb-8 font-bold text-center text-primary-900 pt-2">
                 Stay one step ahead of potential threats
@@ -86,7 +86,7 @@
                         <div class="font-bold text-xl mb-2 text-primary-900">Simplified Thread Identification</div>
                         <p class="text-gray-700 text-base">
                             Effortlessly pinpoint threats to your IT systems and assets. Our AI assistant ensures a
-                            smooth start to your threat modeling journey.
+                            smooth start to your threat modelling journey.
                         </p>
                     </div>
                 </div>
@@ -98,7 +98,8 @@
                     <img src="img/shield.png" alt="Shield Icon" class="w-12 h-12 mx-auto my-6 ts-static-icon">
                     <img src="img/shield.gif" alt="Animated Icon" class="w-16 h-16 mx-auto my-4 ts-animated-icon">
                     <div class="px-6 pt-2 pb-6 text-center">
-                        <div class="font-bold text-xl mb-2 text-primary-900">Transparent Risks &amp; Management</div>
+                        <div class="font-bold text-xl mb-2 text-primary-900">Transparent Risk &amp; Threat Management
+                        </div>
                         <p class="text-gray-700 text-base">
                             Clearly define and manage your security risks and their countermeasures, ensuring informed
                             and strategic decision-making.
@@ -150,11 +151,11 @@
                         </svg>
                     </div>
                     <div class="font-bold text-xl mb-2 text-primary-900 text-center">Initial Consultation</div>
-                    <p class="text-gray-700 text-center pb-6">
-                        Reach out for a preliminary discussion, followed by scheduling our specialized threat modeling
-                        workshop. <br />
-                        Currently, we provide these workshops free of charge!
+                    <p class="text-gray-700 text-center">
+                        Reach out for a preliminary discussion, followed by scheduling our specialized threat modelling
+                        workshop.
                     </p>
+
                 </div>
 
                 <!-- CARD 2 -->
@@ -174,10 +175,15 @@
                         </svg>
                     </div>
                     <div class="font-bold text-xl mb-2 text-primary-900 text-center">Interactive Workshop</div>
-                    <p class="text-gray-700 text-center pb-6">
+                    <p class="text-gray-700 text-center">
                         Participate in a 2-hour hands-on workshop using your system as a case study to create an initial
                         threat model and learn how to effectively use ThreatShield.
+
                     </p>
+                    <div class="border px-4 py-2 rounded-md border-purple-500 my-2 text-purple-800 text-center">
+                        <span class="text-xs font-semibold">Be quick:</span><br />
+                        Free of charge for first requests
+                    </div>
                 </div>
 
                 <!-- CARD 3 -->
@@ -315,7 +321,7 @@
                         <div>
                             <div class="font-bold text-xl mb-6 text-primary-900">
                                 Strengthen your defenses: <br />
-                                Threat modeling workshops
+                                Threat modelling workshops
                             </div>
 
                             <hr class="border-t-2 border-gray-300 mx-auto my-4">
@@ -363,7 +369,7 @@
 
     </main>
 
-    <div class="text-gray-100">
+    <div>
         {{> footer }}
     </div>
 
