--- a/src/imprint.html
+++ b/src/imprint.html
@@ -12,15 +12,17 @@
 </head>
 
 <body class="bg-black h-screen">
-    <div class="container mx-auto text-center py-20  text-purple-500">
-        <h1 class="my-2 text-2xl font-bold">Imprint</h1>
-        <p class="text-xl">Responsible for content of this site</p>
+    <div class="container mx-auto text-center py-20 text-gray-200">
+        <h1 class="my-4 text-3xl font-bold text-gray-100">Imprint</h1>
+        <p class="">Responsible for content of this site:</p>
         <p class="my-3">
             Inspired Consulting GmbH<br />
             Konrad-Adenauer-Ufer 7 · 50668 Köln <br />
             Handelsregister: HRB 99932<br />
             Registergericht: Amtsgericht Köln<br />
-            VAT: DE327219324<br />
+            VAT: DE327219324
+        </p>
+        <p class="text-sm">
             Represented by the managing directors: <br />
             Christian Albrecht, Oliver Tigges<br />
         </p>
@@ -29,19 +31,25 @@
             Phone: +49 221 27321334<br />
             E-Mail:get@inspired.consulting
         </p>
-        <section class="my-6">
+
+        <p class="mt-3">
+            ThreatShield has been developed in the
+            <a href="https://inspired.consulting/digitale-manufaktur"><span class="text-inspired-gray font-semibold">
+                    Digital Manufactory</span></a>
+            of
+            <a href="https://inspired.consulting"><span class="text-inspired-gray  font-semibold">Inspired
+                    Consulting</span></a>
+        </p>
+        <section class="my-6 text-gray-500">
             <ul>
                 <li><a href="https://www.flaticon.com/de/kostenlose-animierte-icons/roboter"
-                        title="Animated roboter icon"
-                        class="underline underline-offset-4 hover:text-primary-100">Animated roboter icon by Freepik -
+                        title="Animated roboter icon" class="hover:text-primary-100">Animated roboter icon by Freepik -
                         Flaticon</a></li>
                 <li><a href="https://www.flaticon.com/de/kostenloses-animiertes-icon/zusammenarbeit_9822027?term=menschen&page=1&position=8&origin=tag&related_id=9822027"
-                        title="Animated people icon"
-                        class="underline underline-offset-4 hover:text-primary-100">Animated people icon by Freepik -
+                        title="Animated people icon" class="hover:text-primary-100">Animated people icon by Freepik -
                         Flaticon</a></li>
                 <li><a href="https://www.flaticon.com/de/kostenlose-animierte-icons/sicherheit"
-                        title="Animated shield icons"
-                        class="underline underline-offset-4 hover:text-primary-100">Animated shield icon by Freepik -
+                        title="Animated shield icons" class="hover:text-primary-100">Animated shield icon by Freepik -
                         Flaticon</a></li>
             </ul>
         </section>
