Added common doc head include

--- a/src/imprint.html
+++ b/src/imprint.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="ThreatShield - Model and analyse threats to your IT systems" />
     <meta name="robots" content="index, follow" />
-    <title>ThreatShield</title>
+    <title>ThreatShield - Imprint</title>
     <script type="module" crossorigin src="./js/main.js" defer></script>
     <link rel="stylesheet" href="./css/main.css" />
+    {{> doc_head}}
 </head>
 
 <body class="bg-black h-screen">
