--- a/src/privacy.html
+++ b/src/privacy.html
@@ -9,6 +9,7 @@
     <title>Privacy Policy - ThreatShield</title>
     <script type="module" crossorigin src="./js/main.js" defer></script>
     <link rel="stylesheet" href="./css/main.css" />
+    {{> doc_head}}
 </head>
 
 <body class="bg-black h-screen">
