--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <title>ThreatShield</title>
     <script type="module" crossorigin src="./js/main.js" defer></script>
     <link rel="stylesheet" href="./css/main.css" />
+    {{> doc_head}}
 </head>
 
 <!-- HEADER -->
@@ -48,7 +49,7 @@
             </div>
         </div>
     </header>
-    
+
 
 
     <main>
