improved img styling in preview section

--- a/src/index.html
+++ b/src/index.html
@@ -40,13 +40,13 @@
                 <p class="text-2xl font-light mt-6 mb-12 md:text-1xl lg:text-3xl">
                     Identify and mitigate potential security threats with ThreatShield's threat modelling service</p>
                 <a href="mailto:threatshield@inspired.consulting"
-                    class="bg-primary-900 text-white text-center tracking-wider py-4 px-6 rounded hover:bg-primary-700">
+                    class="block sm:inline bg-primary-800 text-white text-center tracking-wider py-4 px-6 rounded hover:bg-primary-700">
                     Send us an e-mail</a>
                 <div class="mt-12">
                     <span class="hover:text-primary-900">
                         <img src="./logos/github-mark-white.png" alt="GitHub Logo" class="w-6 h-6 mx-1 inline-block">
                         <a href="https://github.com/inspired-consulting/threat_shield" target="_blank"
-                            class="inline-block underline underline-offset-4 active:text-primary-100 hover:primary-300">
+                            class="underline underline-offset-4 active:text-primary-100 hover:primary-300">
                             Fork us on GitHub</a>
                     </span>
                 </div>
@@ -59,17 +59,16 @@
 
         <!-- PREVIEW WEB APP -->
 
-        <section class="container my-24 text-primary-100 px-4 md:px-4 md:mx-auto lg:px-4">
-            <div class="grid md:grid-cols-2 gap-4">
-                <div class="md:mr-12">
-                    <h2 class="text-4xl mb-8 font-bold">AI-Driven Threat Modeling with Intuitive Design </h2>
-                    <hr class="border-t-2 border-secondary-500 w-1/6 my-6">
-                    <p class="text-lg">
-                        We use AI to provide concrete examples instead of abstract documentation.
-                        Our approach ensures easily accessible guidance and actionable recommendations.</p>
-                </div>
-                <img src="./img/preview-web-app.png" alt="Organisationsseite von ThreatShield"
-                    class="mt-4 max-w-full md:col-start-2 sm:mt-6 lg:mt-0">
+        <section class="container my-24 text-primary-100 px-4 md:px-4 md:mx-auto lg:px-4 flex flex-col lg:flex-row">
+            <div class="md:mr-12 lg:items-center">
+                <h2 class="text-4xl mb-8 font-bold">AI-Driven Threat Modeling with Intuitive Design </h2>
+                <hr class="border-t-2 border-secondary-500 w-1/4 my-6">
+                <p class="text-lg">
+                    We use AI to provide concrete examples instead of abstract documentation.
+                    Our approach ensures easily accessible guidance and actionable recommendations.</p>
+            </div>
+            <div><img src="./img/preview-web-app.png" alt="Vorschaubild von der Anwendung"
+                    class="mt-4 max-h-full sm:mt-6 lg:pl-4 lg:mt-0">
             </div>
         </section>
 
