added banner and transitions to links

--- a/src/index.html
+++ b/src/index.html
@@ -19,40 +19,12 @@
 
 <body class="bg-primary-900 tracking-wide leading-160%">
 
-    <!-- <header class="w-full pb-24 px-4 text-gray-100 font-light relative lg:pt-24">
-        <div class="absolute inset-0 z-0"
-            style="background-image: linear-gradient(90deg, rgba(102,69,232,1.00) 8%, rgba(126,73,244,1.00) 53%, rgba(149,74,244,1.00) 89%); background-position: center center; background-size: cover;">
-        </div>
-        
-        <div class="container mx-auto relative z-10 flex flex-col lg:flex-row lg:items-center">
-            <img src="./logos/threatshield_white.svg" alt="ThreatShield Logo"
-                class="lg:hidden w-44 rounded-sm h-auto border-2 px-4 py-4 mt-6 mb-12">
-            <div class="mr-12 w-full h-full lg:w-1/2">
-                <img src="./img/shiba-hero.png" alt="Hero image" class="w-full h-full object-cover">
-            </div>
-            <div class="w-full lg:w-1/2">
-               
-                <img src="./logos/threatshield_white.svg" alt="ThreatShield Logo"
-                    class="hidden lg:block w-44 rounded-sm h-auto border-2 px-4 py-4 my-12 lg:mt-0">
-                <h1 class="text-4xl w-full font-bold pt-10 lg:pt-0 md:text-5xl lg:text-6xl xl:text-7xl">
-                    Protect your business from security threats
-                </h1>
-                <p class="text-2xl font-light mt-6 mb-12 md:text-1xl lg:text-3xl">
-                    Identify and mitigate potential security threats with ThreatShield's threat modelling service</p>
-                <a href="mailto:threatshield@inspired.consulting"
-                    class="block sm:inline bg-primary-800 text-white text-center tracking-wider py-4 px-6 rounded hover:bg-primary-700">
-                    Send us an e-mail</a>
-                <div class="mt-12">
-                    <span class="hover:text-primary-900">
-                        <img src="./logos/github-mark-white.png" alt="GitHub Logo" class="w-6 h-6 mx-1 inline-block">
-                        <a href="https://github.com/inspired-consulting/threat_shield" target="_blank"
-                            class="underline underline-offset-4 active:text-primary-100 hover:primary-300">
-                            Fork us on GitHub</a>
-                    </span>
-                </div>
-            </div>
-        </div>
-    </header> -->
+    <!-- Banner -->
+
+    <div
+        class="bg-primary-800 text-white text-center py-2 px-4 w-full flex items-center justify-center space-x-2 text-xs">
+        Free interactive Workshop for first requests!
+    </div>
 
     <header class="w-full text-gray-100 font-light relative">
         <div class="absolute inset-0 z-0"
@@ -74,14 +46,14 @@
                 </h1>
                 <p class="text-2xl font-light mt-6 mb-12 md:text-1xl lg:text-3xl">
                     Identify and mitigate potential security threats with ThreatShield's threat modelling service</p>
-                    <a href="mailto:threatshield@inspired.consulting"
-                        class="block sm:w-full lg:inline bg-primary-800 text-white text-center tracking-wider py-4 px-6 rounded hover:bg-primary-700">
-                        Send us an e-mail</a>
+                <a href="mailto:threatshield@inspired.consulting"
+                    class="block sm:w-full lg:inline bg-primary-800 text-white text-center tracking-wider py-4 px-6 rounded hover:bg-primary-700 transition-all">
+                    Send us an e-mail</a>
                 <div class="mt-12">
                     <span class="hover:text-primary-900">
                         <img src="./logos/github-mark-white.png" alt="GitHub Logo" class="w-6 h-6 mx-1 inline-block">
                         <a href="https://github.com/inspired-consulting/threat_shield" target="_blank"
-                            class="underline underline-offset-4 active:text-primary-100 hover:primary-300">
+                            class="underline underline-offset-4 active:text-primary-100 hover:primary-300 transition-all">
                             Fork us on GitHub</a>
                     </span>
                 </div>
@@ -312,7 +284,7 @@
                                 </ul>
                             </div>
                             <a href="mailto:threatshield@inspired.consulting"
-                                class="w-full bg-primary-500 text-white text-center py-3 mb-4 rounded hover:bg-primary-700 lg:mt-8">
+                                class="w-full bg-primary-500 text-white text-center py-3 mb-4 rounded hover:bg-primary-700 lg:mt-8 transition-all">
                                 Get in touch
                             </a>
                         </div>
@@ -365,7 +337,7 @@
                                 </ul>
                             </div>
                             <a href="mailto:threatshield@inspired.consulting"
-                                class="w-full bg-primary-500 text-white text-center py-3 mb-4 rounded hover:bg-primary-700">
+                                class="w-full bg-primary-500 text-white text-center py-3 mb-4 rounded hover:bg-primary-700 transition-all">
                                 Get in touch</a>
                         </div>
                     </div>
@@ -420,7 +392,7 @@
                                 </ul>
                             </div>
                             <a href="mailto:threatshield@inspired.consulting"
-                                class="w-full bg-primary-500 text-white text-center py-3 mb-4 rounded hover:bg-primary-700">
+                                class="w-full bg-primary-500 text-white text-center py-3 mb-4 rounded hover:bg-primary-700 transition-all">
                                 Get in touch
                             </a>
                         </div>
