--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
     <div
         class="bg-primary-800 text-white text-center py-2 px-4 w-full flex items-center justify-center space-x-2 text-xs">
-        Free interactive Workshop for first requests!
+        Free interactive workshop for first requests!
     </div>
 
     <header class="w-full text-gray-100 font-light relative">
